--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table>
       <tr>
-        <td><img src="icon.jpeg" alt="profile img" height="150" width="150"></td>
+        <td><img src="https://github.com/arkaprabha-majumdar/cv/raw/master/icon.jpeg" alt="profile img" height="150" width="150"></td>
         <td><h1>Arkaprabha Majumdar</h1>
           I am a CS-Data Science graduate (M.Sc.) with industry experience in Business Intelligence, Trade & Treasury
   Services.<br>
