--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>
       Arkaprabha Majumdar's profile
     </title>
+    <link rel="stylesheet" href="/home/arkaprabham/Desktop/udemy/webpage/HTML site/master.css">
   </head>
   <body>
     <table>
