--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>
       Arkaprabha Majumdar's profile
     </title>
-    <link rel="stylesheet" href="/home/arkaprabham/Desktop/udemy/webpage/HTML site/master.css">
+    <link rel="stylesheet" href="https://github.com/arkaprabha-majumdar/cv/raw/master/master.css">
   </head>
   <body>
     <table>
