--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>
       Arkaprabha Majumdar's profile
     </title>
-    <link rel="stylesheet" href="/master/master.css">
+    <link rel="stylesheet" href="master.css">
   </head>
   <body>
     <table>
