--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       Arkaprabha Majumdar's profile
     </title>
     <link rel="stylesheet" href="https://github.com/arkaprabha-majumdar/cv/raw/master/css/master.css">
+    <link rel="icon" href="https://github.com/arkaprabha-majumdar/cv/blob/master/favicon.ico">
   </head>
   <body>
     <table>
