--- a/index.html
+++ b/index.html
@@ -1,47 +1,63 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=BioRhyme' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower" rel="stylesheet">
     <title>
       Arkaprabha Majumdar's profile
     </title>
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="/css/master.css">
+    <link rel="icon" href="/favicon.ico">
   </head>
   <body>
-    <table>
-      <tr>
-        <td><img src="https://github.com/arkaprabha-majumdar/cv/raw/master/icon.jpeg" alt="profile img" height="150" width="150"></td>
-        <td><h1>Arkaprabha Majumdar</h1>
-          I am a CS-Data Science graduate (M.Sc.) with industry experience in Business Intelligence, Trade & Treasury
-  Services.<br>
-  I am also highly enthusiastic about broadening my
+    <div class="top-container">
+      <img src="/home/arkaprabham/Desktop/udemy/webpage/coder-clipart.jpg" alt="coder profile art" width="40%">
+      <img class="top-cloud" src="/white-cloud-clipart.png" alt="cloud" width="20%">
+      <h1>I'm Arkaprabha.</h1>
+      <h3>A <span class="pro">Data</span> scientist</h3>
+      <img class="bottom-cloud" src="/white-cloud-clipart.png" alt="cloud"width="20%">
+      <img src="/mountain.jpg" alt="nice mountain image" width="100%">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="/circle-cropped.png" alt="profile pic" width="25%">
+        <h2>Hello.</h2>
+        <p>I am a CS-Data Science graduate (M.Sc.) with industry experience in Business Intelligence, Trade & Treasury
+  Services. <br>I am also highly enthusiastic about broadening my
   horizons, and fascinated by the advancements in Computer Vision and Deep Learning. I also love fitness, martial
-  arts and sketching.</td>
-      </tr>
-    </table>
-  <hr>
-  <h3>Work Experience:</h3>
-  <table cellspacing=0.2>
-    <tr>02/2020-06/2020 - <b>TATA CONSULTANCY SERVICES</b></tr>
-    <tr><td>Business Analytics Intern</td></tr>
-    <tr><td>Model and predict probability of winning a deal for the
-client</td></tr>
-  </table>
-  <hr>
-  <h3>Education:</h3>
-    <table>
-    <tr>
-      <td>
-      <ul>
-      <li>2018-Present - Central University of Rajasthan <br>
-          M.Sc. Computer Science (Big Data)</li>
-      <li>2015-2018 - Adamas University, Kolkata <br>
-          B.Sc. Mathematics</li>
-    </ul></td>
-    <td><a href="https://curaj.ac.in">curaj.ac.in </a><br><br>
-      <a href="https://adamasuniversity.ac.in">adamasuniversity.ac.in</a></td>
-  </tr>
-  </table>
-  <hr>
+  arts and sketching. </p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="" src="" alt="">
+          <h3>Lorem & Ipsum</h3>
+          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        </div>
+        <div class="skill-row">
+          <img class="" src="" alt="">
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </div>
+    </div>
+
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p>Â© 2018 Name Surname.</p>
+    </div>
   </body>
 </html>
