--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="top-container">
-      <img src="/home/arkaprabham/Desktop/udemy/webpage/coder-clipart.jpg" alt="coder profile art" width="40%">
+      <img src="/coder-clipart.jpg" alt="coder profile art" width="40%">
       <img class="top-cloud" src="/white-cloud-clipart.png" alt="cloud" width="20%">
       <h1>I'm Arkaprabha.</h1>
       <h3>A <span class="pro">Data</span> scientist</h3>
