--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1>I'm Arkaprabha.</h1>
       <h3>A <span class="pro">Data</span> scientist</h3>
       <img class="bottom-cloud" src="/white-cloud-clipart.png" alt="cloud"width="20%">
-      <img src="/mountain.jpg" alt="nice mountain image" width="100%">
+      <img src="/mountain.png" alt="nice mountain image" width="100%">
     </div>
     <div class="middle-container">
       <div class="profile">
