--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>
       Arkaprabha Majumdar's profile
     </title>
-    <link rel="stylesheet" href="/css/master.css">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="stylesheet" href="css/master.css">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <div class="top-container">
