--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
       Arkaprabha Majumdar's profile
     </title>
     <link rel="stylesheet" href="css/master.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="./favicon.ico">
   </head>
   <body>
     <div class="top-container">
-      <img src="https://github.com/arkaprabha-majumdar/cv/blob/master/coder-clipart.png" alt="coder profile art" width="40%">
-      <img class="top-cloud" src="https://github.com/arkaprabha-majumdar/cv/blob/master/white-cloud-clipart.png" alt="cloud" width="20%">
+      <img src="./coder-clipart.png" alt="coder profile art" width="40%">
+      <img class="top-cloud" src="./white-cloud-clipart.png" alt="cloud" width="20%">
       <h1>I'm Arkaprabha.</h1>
       <h3>A <span class="pro">Data</span> scientist</h3>
-      <img class="bottom-cloud" src="https://github.com/arkaprabha-majumdar/cv/blob/master/white-cloud-clipart.png" alt="cloud"width="20%">
-      <img src="https://github.com/arkaprabha-majumdar/cv/blob/master/mountain.png" alt="nice mountain image" width="100%">
+      <img class="bottom-cloud" src="./white-cloud-clipart.png" alt="cloud"width="20%">
+      <img src="./mountain.png" alt="nice mountain image" width="100%">
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="https://github.com/arkaprabha-majumdar/cv/blob/master/circle-cropped.png" alt="profile pic" width="25%">
+        <img src="./circle-cropped.png" alt="profile pic" width="25%">
         <h2>Hello.</h2>
         <p>I am a CS-Data Science graduate (M.Sc.) with industry experience in Business Intelligence, Trade & Treasury
   Services. <br>I am also highly enthusiastic about broadening my
