--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="./circle-cropped.png" alt="profile pic" width="25%">
+        <img src="/home/arkaprabham/Desktop/udemy/webpage/HTML site/circle-cropped.png" alt="profile pic" width="25%">
         <h2>Hello.</h2>
         <p>I am a CS-Data Science graduate (M.Sc.) with industry experience in Business Intelligence, Trade & Treasury
-  Services. <br>I am also highly enthusiastic about broadening my
-  horizons, and fascinated by the advancements in Computer Vision and Deep Learning. I also love fitness, martial
+  Services. <br>I also love fitness, martial
   arts and sketching. </p>
       </div>
       <hr>
@@ -34,29 +33,34 @@
         <h2>My Skills.</h2>
         <div class="skill-row">
           <img class="" src="" alt="">
-          <h3>Lorem & Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          <h3>Business Analytics w/ Python</h3>
+          <iframe src="https://giphy.com/embed/UV8mPZc6WjCrm" width="480" height="240" frameBorder="0"></iframe>
+          <p>Model and predict probability of winning a deal for the
+              client using Text Mining, Product recommendation, Customer
+                Segmentation, Win/Loss Analysis.<br>I am also highly enthusiastic about broadening my
+                horizons, and fascinated by the advancements in Computer Vision and Deep Learning. </p>
         </div>
         <div class="skill-row">
           <img class="" src="" alt="">
-          <h3>Lorem Ipsum Dolor</h3>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          <h3>Machine Learning and Data Science</h3>
+          <iframe src="https://giphy.com/embed/p4sQzJa8qfKBG" width="480" height="324" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+          <p>Jupyterlab, ML(Numpy, Pandas, sklearn),
+              OpenCV, CNN and GAN</p>
         </div>
       </div>
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        <h3>"Don’t let people tell you the sky is the limit, when there’s footprints on the moon."</h3>
+        <h5>Feel free to mail me using this button, or come connect with me on any of my social media handles :-</h5>
+        <a class="btn" href="mailto:pravaa8@email.com">CONTACT ME</a>
       </div>
     </div>
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/arkaprabha-majumdar-ab8091114/">LinkedIn</a>
+      <a class="footer-link" href="https://www.instagram.com/the.greatest__showman/">Instagram</a>
       <p>Â© 2018 Name Surname.</p>
     </div>
   </body>
