--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="/home/arkaprabham/Desktop/udemy/webpage/HTML site/circle-cropped.png" alt="profile pic" width="25%">
+        <img src="circle-cropped.png" alt="profile pic" width="25%">
         <h2>Hello.</h2>
         <p>I am a CS-Data Science graduate (M.Sc.) with industry experience in Business Intelligence, Trade & Treasury
   Services. <br>I also love fitness, martial
