--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                 horizons, and fascinated by the advancements in Computer Vision and Deep Learning. </p>
         </div>
         <div class="skill-row">
-          <img class="" src="" alt="">
           <h3>Machine Learning and Data Science</h3>
           <iframe src="https://giphy.com/embed/p4sQzJa8qfKBG" width="480" height="324" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
           <p>Jupyterlab, ML(Numpy, Pandas, sklearn),
@@ -52,7 +51,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>"Don’t let people tell you the sky is the limit, when there’s footprints on the moon."</h3>
-        <h5>Feel free to mail me using this button, or come connect with me on any of my social media handles :-</h5>
+        <p><b>Feel free to mail me using this button, or come connect with me on any of my social media handles :</b>-</p>
         <a class="btn" href="mailto:pravaa8@email.com">CONTACT ME</a>
       </div>
     </div>
@@ -61,7 +60,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/arkaprabha-majumdar-ab8091114/">LinkedIn</a>
       <a class="footer-link" href="https://www.instagram.com/the.greatest__showman/">Instagram</a>
-      <p>Â© 2018 Name Surname.</p>
+      <p>Arkaprabha Majumdar© 2020</p>
     </div>
   </body>
 </html>
