--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2>Get In Touch</h2>
         <h3>"Don’t let people tell you the sky is the limit, when there’s footprints on the moon."</h3>
         <p><b>Feel free to mail me using this button, or come connect with me on any of my social media handles :</b>-</p>
-        <a class="btn" href="mailto:pravaa8@email.com">CONTACT ME</a>
+        <button class="button"><a class="btn" href="mailto:pravaa8@email.com"><b>CONTACT ME<b></a></button>
       </div>
     </div>
 
